// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionList matches snapshot when there are list items 1`] = `
<Fragment>
  <FilterTextBox
    filterType={0}
    setFilteredList={[Function]}
  />
  <ResizableDetailsList
    columns={
      [
        {
          "key": "name",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.name",
        },
        {
          "key": "id",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.id",
        },
        {
          "key": "state",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.state",
        },
      ]
    }
    items={[]}
    onRenderItemColumn={[Function]}
    selectionMode={0}
  />
</Fragment>
`;

exports[`SubscriptionList matches snapshot when there are no list items 1`] = `
<Fragment>
  <FilterTextBox
    filterType={0}
    setFilteredList={[Function]}
  />
  <ResizableDetailsList
    columns={
      [
        {
          "key": "name",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.name",
        },
        {
          "key": "id",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.id",
        },
        {
          "key": "state",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.state",
        },
      ]
    }
    items={[]}
    onRenderItemColumn={[Function]}
    selectionMode={0}
  />
  authentication.azureActiveDirectory.subscriptionList.noItemText
</Fragment>
`;
